--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
+    "fabric": "^5.4.2",
+    "fabric-with-gestures": "^4.5.0",
     "ionicons": "^7.0.0",
+    "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -44,7 +47,9 @@
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.0.1",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@types/fabric": "^4.5.7",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.13.5",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
@@ -58,7 +63,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.3"
+    "typescript": "^5.7.3"
   },
   "description": "An Ionic project"
 }
