adicionado plataforma para build de apk

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "android:build": "ionic cap build android",
+    "android:run": "ionic cap run android --target Pixel_3a_API_34",
+    "android:live": "ionic cap run android -l --external --target Pixel_3a_API_34"
   },
   "private": true,
   "dependencies": {
@@ -21,13 +24,15 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@capacitor/app": "7.0.0",
-    "@capacitor/core": "7.0.1",
-    "@capacitor/haptics": "7.0.0",
-    "@capacitor/keyboard": "7.0.0",
-    "@capacitor/status-bar": "7.0.0",
+    "@capacitor/android": "6.0.0",
+    "@capacitor/app": "6.0.1",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "6.0.0",
+    "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
-    "fabric": "^5.4.2",
+    "fabric": "5.3.0-browser",
     "ionicons": "^7.0.0",
     "pdfjs-dist": "^4.10.38",
     "rxjs": "~7.8.0",
@@ -44,7 +49,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
-    "@capacitor/cli": "7.0.1",
+    "@capacitor/cli": "6.0.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/fabric": "^4.5.7",
     "@types/jasmine": "~5.1.0",
